# gnome-power-display

./: .bazelignore  .bazelrc  .bazelrc.ci  .gitignore  AGENTS.md  BUILD.bazel  CLAUDE.md  FUTURE_IMPROVEMENTS.md  MODULE.bazel  README.md  go.mod  go.sum  things_needed
.devcontainer/: Dockerfile  devcontainer.json
.devcontainer/ci/: devcontainer.json
.github/workflows/: ci.yml  devcontainer-image.yml
cmd/power-calibrate/: BUILD.bazel  main.go
cmd/power-gui/: BUILD.bazel  battery.go  dbus.go  graphs.go  main.go  settings.go  stats.go  theme.go  timerange.go
cmd/power-monitor-daemon/: BUILD.bazel  main.go
gnome-extension/: BUILD.bazel  dragHandler.js  extension.js  graphUtils.js  graphs.js  install.sh  metadata.json  prefs.js  stylesheet.css
gnome-extension/schemas/: org.gnome.shell.extensions.power-monitor.gschema.xml
internal/calibration/: BUILD.bazel  calibration.go  calibration_test.go
internal/collector/: BUILD.bazel  backlight.go  backlight_test.go  battery.go  battery_health.go  battery_test.go  process.go  sleep.go  statelog.go  statelog_test.go  types.go
internal/config/: BUILD.bazel  config.go  config_test.go
internal/dbus/: BUILD.bazel  service.go  service_test.go
internal/storage/: BUILD.bazel  cleanup.go  cleanup_test.go  db.go  db_test.go
notes/: battery_measurment  meas
packaging/: BUILD.bazel  config.toml  nfpm-daemon.yaml  nfpm-extension.yaml  org.gnome.PowerMonitor.conf  postinstall-daemon.sh  postinstall.sh  postremove.sh  power-gui.desktop  power-monitor-daemon.service  power-monitor-shutdown.service  power-monitor-sleep-hook  powerlog_icon.xcf  preremove-daemon.sh
scripts/: battery-watch.py  charge-update-interval.sh  debug-packaged-extension.sh  install-daemon.sh  install-hooks.sh  install-packages.sh  install-power-gui-launcher.sh  intel-gpu-stats.sh  measure-other-power.sh  pci-power.sh  power-monitor-shutdown.service  rapl-test.sh  spawn-wayland-packaged.sh
scripts/prototyping/: battery-health.sh
tools/: gopackagesdriver.sh
