bazel_dep(
    name = "rules_go",
    version = "0.60.0",
)
bazel_dep(name = "bazel_skylib_gazelle_plugin", version = "1.7.1")
bazel_dep(
    name = "gazelle",
    version = "0.47.0",
)

nfpm = use_extension("//build/nfpm:extensions.bzl", "nfpm")
use_repo(nfpm, "nfpm_toolchain")

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")
use_repo(
    go_deps,
    "com_github_burntsushi_toml",
    "com_github_diamondburned_gotk4_adwaita_pkg",
    "com_github_diamondburned_gotk4_pkg",
    "com_github_godbus_dbus_v5",
    "com_github_mattn_go_sqlite3",
)
