# bazel_dep(name = "hermetic_cc_toolchain", version = "4.1.0")

# toolchains = use_extension("@hermetic_cc_toolchain//toolchain:ext.bzl", "toolchains")
# use_repo(toolchains, "zig_sdk")

# register_toolchains(
#     "@zig_sdk//toolchain/...",
#     "@zig_sdk//libc_aware/toolchain/...",
# )

bazel_dep(
    name = "rules_go",
    version = "0.60.0",
)
bazel_dep(
    name = "bazel_skylib",
    version = "1.9.0",
)
bazel_dep(name = "bazel_skylib_gazelle_plugin", version = "1.7.1")
bazel_dep(
    name = "gazelle",
    version = "0.47.0",
)
bazel_dep(name = "rules_cc", version = "0.2.16")

nfpm = use_extension("//build/nfpm:extensions.bzl", "nfpm")
use_repo(nfpm, "nfpm_toolchain")

sys_libs = use_extension("//third_party/glib_bazel:extensions.bzl", "pkg_config_ext")
sys_libs.lib(name = "glib", pkg = "glib-2.0")
sys_libs.lib(name = "gtk4", pkg = "gtk4")
sys_libs.lib(name = "libadwaita", pkg = "libadwaita-1")
use_repo(sys_libs, "glib", "gtk4", "libadwaita")

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")
go_deps.gazelle_override(
    path = "github.com/diamondburned/gotk4/pkg",
    directives = [
        "gazelle:map_kind go_library go_library_gtk4 @@//third_party/glib_bazel:go_with_glib.bzl",
    ],
)
go_deps.gazelle_override(
    path = "github.com/diamondburned/gotk4-adwaita/pkg",
    directives = [
        "gazelle:map_kind go_library go_library_adwaita @@//third_party/glib_bazel:go_with_glib.bzl",
    ],
)
use_repo(
    go_deps,
    "com_github_burntsushi_toml",
    "com_github_diamondburned_gotk4_adwaita_pkg",
    "com_github_diamondburned_gotk4_pkg",
    "com_github_godbus_dbus_v5",
    "com_github_mattn_go_sqlite3",
)
