load("//build/nfpm:nfpm.bzl", "nfpm_pkg")

filegroup(
    name = "service-files",
    srcs = [
        "org.gnome.PowerMonitor.conf",
        "postinstall-daemon.sh",
        "power-monitor-daemon.service",
        "power-monitor-shutdown.service",
        "power-monitor-sleep-hook",
        "preremove-daemon.sh",
    ],
    visibility = ["//visibility:public"],
)

filegroup(
    name = "scripts",
    srcs = [
        "postinstall.sh",
        "postremove.sh",
    ],
    visibility = ["//visibility:public"],
)

# Daemon package (binary + systemd service)

nfpm_pkg(
    name = "daemon-rpm",
    package_name = "power-monitor-daemon",
    srcs = [
        ":service-files",
        "config.toml",
        "//cmd/power-monitor-daemon",
    ],
    config = "nfpm-daemon.yaml",
    file_map = {
        "power-monitor-daemon_/power-monitor-daemon": "build/power-monitor-daemon",
    },
    packager = "rpm",
    version = "0.1.0",
)

nfpm_pkg(
    name = "daemon-deb",
    package_name = "power-monitor-daemon",
    srcs = [
        ":service-files",
        "config.toml",
        "//cmd/power-monitor-daemon",
    ],
    config = "nfpm-daemon.yaml",
    file_map = {
        "power-monitor-daemon_/power-monitor-daemon": "build/power-monitor-daemon",
    },
    packager = "deb",
    version = "0.1.0",
)

# GNOME extension package (depends on daemon)

nfpm_pkg(
    name = "extension-rpm",
    package_name = "power-monitor-gnome-extension",
    srcs = [
        ":scripts",
        "//gnome-extension:extension-files",
    ],
    config = "nfpm-extension.yaml",
    packager = "rpm",
    version = "0.1.0",
)

nfpm_pkg(
    name = "extension-deb",
    package_name = "power-monitor-gnome-extension",
    srcs = [
        ":scripts",
        "//gnome-extension:extension-files",
    ],
    config = "nfpm-extension.yaml",
    packager = "deb",
    version = "0.1.0",
)
