load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_binary(
    name = "power-calibrate",
    embed = [":power-calibrate_lib"],
    importpath = "github.com/cptspacemanspiff/gnome-power-display/cmd/power-calibrate",
    visibility = ["//visibility:public"],
)

go_library(
    name = "power-calibrate_lib",
    srcs = ["main.go"],
    importpath = "github.com/cptspacemanspiff/gnome-power-display/cmd/power-calibrate",
    visibility = ["//visibility:private"],
    deps = [
        "//internal/calibration",
        "//internal/collector",
    ],
)
