load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_binary(
    name = "power-gui",
    embed = [":power-gui_lib"],
    importpath = "github.com/cptspacemanspiff/gnome-power-display/cmd/power-gui",
    visibility = ["//visibility:public"],
)

go_library(
    name = "power-gui_lib",
    srcs = [
        "battery.go",
        "dbus.go",
        "graphs.go",
        "main.go",
        "settings.go",
        "stats.go",
        "theme.go",
        "timerange.go",
    ],
    importpath = "github.com/cptspacemanspiff/gnome-power-display/cmd/power-gui",
    visibility = ["//visibility:private"],
    deps = [
        "//internal/collector",
        "//internal/config",
        "@com_github_diamondburned_gotk4_adwaita_pkg//adw:go_default_library",
        "@com_github_diamondburned_gotk4_pkg//cairo:go_default_library",
        "@com_github_diamondburned_gotk4_pkg//gdk/v4:go_default_library",
        "@com_github_diamondburned_gotk4_pkg//gio/v2:go_default_library",
        "@com_github_diamondburned_gotk4_pkg//glib/v2:go_default_library",
        "@com_github_diamondburned_gotk4_pkg//gtk/v4:go_default_library",
        "@com_github_diamondburned_gotk4_pkg//pango:go_default_library",
        "@com_github_diamondburned_gotk4_pkg//pangocairo:go_default_library",
        "@com_github_godbus_dbus_v5//:go_default_library",
    ],
)
