load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_binary(
    name = "power-monitor-daemon",
    embed = [":power-monitor-daemon_lib"],
    importpath = "github.com/cptspacemanspiff/gnome-power-display/cmd/power-monitor-daemon",
    visibility = ["//visibility:public"],
)

go_library(
    name = "power-monitor-daemon_lib",
    srcs = ["main.go"],
    importpath = "github.com/cptspacemanspiff/gnome-power-display/cmd/power-monitor-daemon",
    visibility = ["//visibility:private"],
    deps = [
        "//internal/collector",
        "//internal/config",
        "//internal/dbus",
        "//internal/storage",
    ],
)
