load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "calibration",
    srcs = ["calibration.go"],
    importpath = "github.com/cptspacemanspiff/gnome-power-display/internal/calibration",
    visibility = ["//:__subpackages__"],
    deps = [
        "//internal/collector",
    ],
)

go_test(
    name = "calibration_test",
    srcs = ["calibration_test.go"],
    embed = [":calibration"],
    deps = ["//internal/collector"],
)
