load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "collector",
    srcs = [
        "backlight.go",
        "battery.go",
        "battery_health.go",
        "process.go",
        "sleep.go",
        "statelog.go",
        "types.go",
    ],
    importpath = "github.com/cptspacemanspiff/gnome-power-display/internal/collector",
    visibility = ["//:__subpackages__"],
    deps = [
        "@com_github_godbus_dbus_v5//:go_default_library",
    ],
)

go_test(
    name = "collector_test",
    srcs = [
        "backlight_test.go",
        "battery_test.go",
        "statelog_test.go",
    ],
    embed = [":collector"],
)
