load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "dbus",
    srcs = ["service.go"],
    importpath = "github.com/cptspacemanspiff/gnome-power-display/internal/dbus",
    visibility = ["//:__subpackages__"],
    deps = [
        "//internal/storage",
        "@com_github_godbus_dbus_v5//:dbus",
        "@com_github_godbus_dbus_v5//introspect",
    ],
)
