load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "dbus",
    srcs = ["service.go"],
    importpath = "github.com/cptspacemanspiff/gnome-power-display/internal/dbus",
    visibility = ["//:__subpackages__"],
    deps = [
        "//internal/storage",
        "@com_github_godbus_dbus_v5//:go_default_library",
        "@com_github_godbus_dbus_v5//introspect:go_default_library",
    ],
)

go_test(
    name = "dbus_test",
    srcs = ["service_test.go"],
    embed = [":dbus"],
    deps = [
        "//internal/collector",
        "//internal/storage",
        "@com_github_godbus_dbus_v5//:go_default_library",
    ],
)
