load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "storage",
    srcs = [
        "cleanup.go",
        "db.go",
    ],
    importpath = "github.com/cptspacemanspiff/gnome-power-display/internal/storage",
    visibility = ["//:__subpackages__"],
    deps = [
        "//internal/collector",
        "@com_github_mattn_go_sqlite3//:go_default_library",
    ],
)

go_test(
    name = "storage_test",
    srcs = [
        "cleanup_test.go",
        "db_test.go",
    ],
    embed = [":storage"],
    deps = ["//internal/collector"],
)
